// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity screen component renders correctly with an entity as param 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <CommentList
    entity={
      ActivityModel {
        "attachment_guid": false,
        "blurb": false,
        "comments:count": undefined,
        "container_guid": "activityguid0",
        "custom_data": false,
        "custom_type": false,
        "description": "Congratulations! ",
        "edited": "",
        "getThumbSource": [Function],
        "guid": "activityguid0",
        "is_visible": true,
        "mature": false,
        "mature_visibility": false,
        "message": "Message",
        "ownerObj": UserModel {
          "getAvatarSource": [Function],
          "guid": "824853017709780997",
          "subtype": false,
          "time_created": "1522036284",
          "type": "user",
        },
        "owner_guid": "824853017709780997",
        "parent_guid": "838106762591510528",
        "paywall": undefined,
        "perma_url": false,
        "pinned": undefined,
        "rowKey": "something0",
        "thumbnail_src": false,
        "thumbs:down:count": undefined,
        "thumbs:down:user_guids": undefined,
        "thumbs:up:count": undefined,
        "thumbs:up:user_guids": undefined,
        "title": "TITLE",
        "type": "activity",
        "wire_totals": Object {
          "tokens": 1000000000000000000,
        },
      }
    }
    header={
      <Activity
        autoHeight={true}
        entity={
          ActivityModel {
            "attachment_guid": false,
            "blurb": false,
            "comments:count": undefined,
            "container_guid": "activityguid0",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "getThumbSource": [Function],
            "guid": "activityguid0",
            "is_visible": true,
            "mature": false,
            "mature_visibility": false,
            "message": "Message",
            "ownerObj": UserModel {
              "getAvatarSource": [Function],
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "paywall": undefined,
            "perma_url": false,
            "pinned": undefined,
            "rowKey": "something0",
            "thumbnail_src": false,
            "thumbs:down:count": undefined,
            "thumbs:down:user_guids": undefined,
            "thumbs:up:count": undefined,
            "thumbs:up:user_guids": undefined,
            "title": "TITLE",
            "type": "activity",
            "wire_totals": Object {
              "tokens": 1000000000000000000,
            },
          }
        }
        navigation={
          Object {
            "push": [MockFunction],
            "state": Object {
              "params": Object {
                "entity": Object {
                  "attachment_guid": false,
                  "blurb": false,
                  "container_guid": "activityguid0",
                  "custom_data": false,
                  "custom_type": false,
                  "description": "Congratulations! ",
                  "edited": "",
                  "getThumbSource": [Function],
                  "guid": "activityguid0",
                  "mature": false,
                  "message": "Message",
                  "ownerObj": Object {
                    "getAvatarSource": [Function],
                    "guid": "824853017709780997",
                    "subtype": false,
                    "time_created": "1522036284",
                    "type": "user",
                  },
                  "owner_guid": "824853017709780997",
                  "parent_guid": "838106762591510528",
                  "perma_url": false,
                  "rowKey": "something0",
                  "thumbnail_src": false,
                  "title": "TITLE",
                  "type": "activity",
                  "wire_totals": Object {
                    "tokens": 1000000000000000000,
                  },
                },
              },
              "routeName": "some",
            },
          }
        }
        newsfeed={
          NewsfeedStore {
            "boosts": Array [],
            "filter": "subscribed",
            "loadingBoost": true,
            "service": NewsfeedService {
              "_getFeed": [MockFunction],
              "getBoosts": [MockFunction],
              "getFeed": [MockFunction],
              "getFeedChannel": [MockFunction],
              "getFeedSuggested": [MockFunction],
            },
            "stores": Object {
              "boostfeed": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  "errorLoading": false,
                  "loaded": false,
                  "offset": "",
                  "refreshing": false,
                  "saving": false,
                },
                "loading": false,
              },
              "subscribed": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [
                    ActivityModel {
                      "attachment_guid": false,
                      "blurb": false,
                      "comments:count": undefined,
                      "container_guid": "activityguid0",
                      "custom_data": false,
                      "custom_type": false,
                      "description": "Congratulations! ",
                      "edited": "",
                      "getThumbSource": [Function],
                      "guid": "activityguid0",
                      "is_visible": true,
                      "mature": false,
                      "mature_visibility": false,
                      "message": "Message",
                      "ownerObj": UserModel {
                        "getAvatarSource": [Function],
                        "guid": "824853017709780997",
                        "subtype": false,
                        "time_created": "1522036284",
                        "type": "user",
                      },
                      "owner_guid": "824853017709780997",
                      "parent_guid": "838106762591510528",
                      "paywall": undefined,
                      "perma_url": false,
                      "pinned": undefined,
                      "rowKey": "something0",
                      "thumbnail_src": false,
                      "thumbs:down:count": undefined,
                      "thumbs:down:user_guids": undefined,
                      "thumbs:up:count": undefined,
                      "thumbs:up:user_guids": undefined,
                      "title": "TITLE",
                      "type": "activity",
                      "wire_totals": Object {
                        "tokens": 1000000000000000000,
                      },
                    },
                  ],
                  "errorLoading": false,
                  "loaded": false,
                  "offset": "",
                  "refreshing": false,
                  "saving": false,
                },
                "loading": false,
              },
              "suggested": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  "errorLoading": false,
                  "loaded": false,
                  "offset": "",
                  "refreshing": false,
                  "saving": false,
                },
                "loading": false,
              },
            },
            "viewed": Array [],
          }
        }
      />
    }
    navigation={
      Object {
        "push": [MockFunction],
        "state": Object {
          "params": Object {
            "entity": Object {
              "attachment_guid": false,
              "blurb": false,
              "container_guid": "activityguid0",
              "custom_data": false,
              "custom_type": false,
              "description": "Congratulations! ",
              "edited": "",
              "getThumbSource": [Function],
              "guid": "activityguid0",
              "mature": false,
              "message": "Message",
              "ownerObj": Object {
                "getAvatarSource": [Function],
                "guid": "824853017709780997",
                "subtype": false,
                "time_created": "1522036284",
                "type": "user",
              },
              "owner_guid": "824853017709780997",
              "parent_guid": "838106762591510528",
              "perma_url": false,
              "rowKey": "something0",
              "thumbnail_src": false,
              "title": "TITLE",
              "type": "activity",
              "wire_totals": Object {
                "tokens": 1000000000000000000,
              },
            },
          },
          "routeName": "some",
        },
      }
    }
    onInputFocus={[Function]}
    store={
      Object {
        "attachment": Object {},
        "comments": Array [
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid0",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid0",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid1",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid1",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid2",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid2",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid3",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid3",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid4",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid4",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
        ],
        "embed": RichEmbedStore {
          "_richEmbedFetchTimer": null,
          "clearRichEmbedAction": [Function],
          "richEmbedUrl": "",
          "setRichEmbedPromise": null,
        },
        "loadComments": [Function],
        "loadNext": "aaaaaa",
        "loadPrevious": "aaaaaa",
        "post": [Function],
        "setText": [Function],
      }
    }
  />
</ForwardRef(View)>
`;

exports[`Activity screen component should show loader until it loads the activity 1`] = `<CenteredLoading />`;

exports[`Activity screen component should show loader until it loads the activity 2`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <CommentList
    entity={
      ActivityModel {
        "comments:count": undefined,
        "edited": undefined,
        "is_visible": true,
        "mature": undefined,
        "mature_visibility": false,
        "paywall": undefined,
        "pinned": undefined,
        "thumbs:down:count": undefined,
        "thumbs:down:user_guids": undefined,
        "thumbs:up:count": undefined,
        "thumbs:up:user_guids": undefined,
      }
    }
    header={
      <Activity
        autoHeight={true}
        entity={
          ActivityModel {
            "comments:count": undefined,
            "edited": undefined,
            "is_visible": true,
            "mature": undefined,
            "mature_visibility": false,
            "paywall": undefined,
            "pinned": undefined,
            "thumbs:down:count": undefined,
            "thumbs:down:user_guids": undefined,
            "thumbs:up:count": undefined,
            "thumbs:up:user_guids": undefined,
          }
        }
        navigation={
          Object {
            "push": [MockFunction],
            "state": Object {
              "params": Object {
                "guid": "1",
              },
              "routeName": "some",
            },
          }
        }
        newsfeed={
          NewsfeedStore {
            "loadingBoost": true,
            "service": NewsfeedService {
              "_getFeed": [MockFunction],
              "getBoosts": [MockFunction],
              "getFeed": [MockFunction],
              "getFeedChannel": [MockFunction],
              "getFeedSuggested": [MockFunction],
            },
            "stores": Object {
              "boostfeed": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  "errorLoading": false,
                  "loaded": false,
                  "offset": "",
                  "refreshing": false,
                  "saving": false,
                },
                "loading": false,
              },
              "subscribed": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  "errorLoading": false,
                  "loaded": false,
                  "offset": "",
                  "refreshing": false,
                  "saving": false,
                },
                "loading": false,
              },
              "suggested": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  "errorLoading": false,
                  "loaded": false,
                  "offset": "",
                  "refreshing": false,
                  "saving": false,
                },
                "loading": false,
              },
            },
            "viewed": Array [],
          }
        }
      />
    }
    navigation={
      Object {
        "push": [MockFunction],
        "state": Object {
          "params": Object {
            "guid": "1",
          },
          "routeName": "some",
        },
      }
    }
    onInputFocus={[Function]}
    store={
      Object {
        "attachment": Object {},
        "comments": Array [
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid0",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid0",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid1",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid1",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid2",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid2",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid3",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid3",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid4",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid4",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
        ],
        "embed": RichEmbedStore {
          "_richEmbedFetchTimer": null,
          "clearRichEmbedAction": [Function],
          "richEmbedUrl": "",
          "setRichEmbedPromise": null,
        },
        "loadComments": [Function],
        "loadNext": "aaaaaa",
        "loadPrevious": "aaaaaa",
        "post": [Function],
        "setText": [Function],
      }
    }
  />
</ForwardRef(View)>
`;
